--- a/frontend-organ-vlasti/src/app/components/zalba/zalba-list/zalba-list.component.sass
+++ b/frontend-organ-vlasti/src/app/components/zalba/zalba-list/zalba-list.component.sass
@@ -6,3 +6,11 @@ th, td
 .root
     padding: $padding-30
     
+tr.header:hover
+    background-color: none
+
+tr:hover
+    background-color: whitesmoke
+
+tr.marked
+    background-color: #ccc
