dodala referencirajuce dokuemnte i kod poverenika

--- a/frontend-poverenik/src/app/components/zalba/zalba-list/zalba-list.component.sass
+++ b/frontend-poverenik/src/app/components/zalba/zalba-list/zalba-list.component.sass
@@ -14,3 +14,12 @@ th, td
 .mat-drawer
     padding: $padding-20
     width: 400px
+
+tr.header:hover
+    background-color: none
+
+tr:hover
+    background-color: whitesmoke
+
+tr.marked
+    background-color: #ccc
