--- a/frontend-poverenik/src/app/components/zalba/odgovor-list/odgovor-list.component.html
+++ b/frontend-poverenik/src/app/components/zalba/odgovor-list/odgovor-list.component.html
@@ -39,10 +39,15 @@
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="columns"></tr>
-      <tr mat-row *matRowDef="let row; columns: columns;"></tr>
+      <tr mat-row *matRowDef="let odgovor; columns: columns;"
+      (click)="selectedOdgovor = selectedOdgovor === odgovor ? null : odgovor"
+      [class.marked]="selectedOdgovor === odgovor"></tr>
       <tr class="mat-row" *matNoDataRow><td class="mat-cell" colspan="5">Nema odgovora</td></tr>
 
     </table>
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
   </div>
 </div>
+
+<app-reference-list *ngIf="selectedOdgovor"
+[reference]="selectedOdgovor.reference"></app-reference-list>
