--- a/frontend-poverenik/src/app/components/zalba/zalba-list/zalba-list.component.html
+++ b/frontend-poverenik/src/app/components/zalba/zalba-list/zalba-list.component.html
@@ -171,12 +171,18 @@
         </ng-container>
       
         <tr mat-header-row *matHeaderRowDef="columns"></tr>
-        <tr mat-row *matRowDef="let row; columns: columns;"></tr>
+        <tr mat-row *matRowDef="let zalba; columns: columns;"
+        (click)="selectedZalba = selectedZalba === zalba ? null : zalba"
+        [class.marked]="selectedZalba === zalba"></tr>
+
         <tr class="mat-row" *matNoDataRow><td class="mat-cell" colspan="6">Nema žalbi</td></tr>
   
       </table>
       <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
     </div>
   </div>  
+
+  <app-reference-list *ngIf="selectedZalba"
+  [reference]="selectedZalba.reference"></app-reference-list>
 
 </mat-drawer-container>
