propagacija operacije odustajanje od zalbe sa backa poverenika na back organ vlasti

--- a/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.html
@@ -96,8 +96,8 @@
         <ng-container matColumnDef="dokumenti">
           <th mat-header-cell *matHeaderCellDef>Dokumenti</th>
           <td mat-cell *matCellDef="let zahtev">
-            <a [routerLink]="'/html/zahtev/' + zahtev.broj">HTML</a><br>
-            <a [routerLink]="'/pdf/zahtev/' + zahtev.broj">PDF</a>
+            <a [routerLink]="'/html/zahtevi/' + zahtev.broj">HTML</a><br>
+            <a [routerLink]="'/pdf/zahtevi/' + zahtev.broj">PDF</a>
           </td>
         </ng-container>
 
