ispravila bug kod xonomya kod formi za zalbe

--- a/frontend-poverenik/src/app/components/zalba/zalba-cutanje-form/zalba-cutanje-form.component.html
+++ b/frontend-poverenik/src/app/components/zalba/zalba-cutanje-form/zalba-cutanje-form.component.html
@@ -42,7 +42,7 @@
                     </mat-option>
                 </mat-select>                
             </mat-form-field>
-            <div id="detaljiEditor"></div>
+            <div id="detaljiEditor1"></div>
         </div>    
         <br><br>
         <app-center-container>
