--- a/frontend-poverenik/src/app/components/zalba/zalba-odluka-form/zalba-odluka-form.component.html
+++ b/frontend-poverenik/src/app/components/zalba/zalba-odluka-form/zalba-odluka-form.component.html
@@ -24,7 +24,7 @@
                     Broj odluke je obavezan!
                 </mat-error>
             </mat-form-field>     
-            <div id="detaljiEditor"></div>
+            <div id="detaljiEditor2"></div>
         </div>    
         <br><br>
         <app-center-container>
