--- a/frontend-poverenik/src/app/components/zalba/zalba-odluka-form/zalba-odluka-form.component.html
+++ b/frontend-poverenik/src/app/components/zalba/zalba-odluka-form/zalba-odluka-form.component.html
@@ -24,6 +24,18 @@
                     Broj odluke je obavezan!
                 </mat-error>
             </mat-form-field>     
+            <mat-form-field>
+                <mat-label>Lozinka</mat-label>
+                <input 
+                type="password" 
+                matInput 
+                autocomplete="off"
+                formControlName="lozinka"
+                placeholder="Unesite lozinku">
+                <mat-error>
+                    Lozinka je obavezna!
+                </mat-error>    
+            </mat-form-field>
             <div id="detaljiEditor2"></div>
         </div>    
         <br><br>
