--- a/frontend-organ-vlasti/src/app/components/odluka/obavestenje-form/obavestenje-form.component.html
+++ b/frontend-organ-vlasti/src/app/components/odluka/obavestenje-form/obavestenje-form.component.html
@@ -61,6 +61,7 @@
                     Cena kopije je obavezna!
                 </mat-error>    
             </mat-form-field>
+            <br><mat-label>Unesite opis tražene informacije: </mat-label>
             <div id="obavestenjeEditor"></div>
         </div>
         <br><br>
