--- a/frontend-organ-vlasti/src/app/components/odluka/odbijanje-form/odbijanje-form.component.html
+++ b/frontend-organ-vlasti/src/app/components/odluka/odbijanje-form/odbijanje-form.component.html
@@ -1,6 +1,7 @@
 <app-form-container>
     <h3>Odbijanje zahteva za informacijama od javnog značaja</h3><br><br>
     <div [class.disabled]="savePending">
+        <br><mat-label>Unesite razlog odbijanja: </mat-label>
         <div id="odbijanjeEditor"></div>
     </div>
     <br><br>
