--- a/frontend-poverenik/src/app/components/zalba/zalba-cutanje-form/zalba-cutanje-form.component.html
+++ b/frontend-poverenik/src/app/components/zalba/zalba-cutanje-form/zalba-cutanje-form.component.html
@@ -55,6 +55,7 @@
                     Lozinka je obavezna!
                 </mat-error>    
             </mat-form-field>
+            <br><mat-label>Unesite opis tražene informacije/deo kojim niste zadovoljni: </mat-label>
             <div id="zalbaCutanjeEditor"></div>
         </div>    
         <br><br>
