--- a/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.html
@@ -1,17 +1,10 @@
 <mat-drawer-container>
-  <mat-drawer mode="side" #drawer class="mat-elevation-z24">
-    <mat-tab-group animationDuration="0ms">
-      <mat-tab [label]="'Napredna pretraga'">
-        <app-zahtev-pretraga
-        [fetchPending]="fetchPending"
-        (pretragaTriggered)="naprednaPretraga($event)"></app-zahtev-pretraga>    
-      </mat-tab>
-      <mat-tab [label]="'Obična pretraga'">
-        <app-obicna-pretraga
-        [fetchPending]="fetchPending"
-        (pretragaTriggered)="obicnaPretraga($event)"></app-obicna-pretraga>
-      </mat-tab>
-    </mat-tab-group>
+  <mat-drawer mode="side" #drawer class="mat-elevation-z24" *ngIf="uloga==='sluzbenik'">
+    <app-pretraga
+    [tip]="'zahtev'"
+    [fetchPending]="fetchPending"
+    (obicnaPretragaTriggered)="obicnaPretraga($event)"
+    (naprednaPretragaTriggered)="naprednaPretraga($event)"></app-pretraga>
   </mat-drawer>
 
   <app-preloader *ngIf="fetchPending"></app-preloader>
