omogucila i gradjaninu obicnu+naprednu pretragicu

--- a/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.html
@@ -1,5 +1,5 @@
 <mat-drawer-container>
-  <mat-drawer mode="side" #drawer class="mat-elevation-z24" *ngIf="uloga==='sluzbenik'">
+  <mat-drawer mode="side" #drawer class="mat-elevation-z24">
     <app-pretraga
     [tip]="'zahtev'"
     [fetchPending]="fetchPending"
