dodala resetovanje napredne pretragice :D

--- a/frontend-organ-vlasti/src/app/components/pretraga/napredna-pretraga/napredna-pretraga.component.html
+++ b/frontend-organ-vlasti/src/app/components/pretraga/napredna-pretraga/napredna-pretraga.component.html
@@ -4,14 +4,21 @@
     <div [id]="page + 'naprednaPretraga'"></div>
     <br><br>
     <app-spacer-container>
-        <span></span>
         <span>
-        <button 
-        *ngIf="!fetchPending"
-        mat-raised-button 
-        color="primary"
-        (click)="pretrazi()">Pretraži</button>
-        <app-spinner-button *ngIf="fetchPending"></app-spinner-button>
+            <button 
+            *ngIf="!fetchPending"
+            mat-raised-button 
+            color="primary"
+            (click)="ngAfterViewInit()">Resetuj</button>
+            <app-spinner-button *ngIf="fetchPending"></app-spinner-button>
+        </span>
+        <span>
+            <button 
+            *ngIf="!fetchPending"
+            mat-raised-button 
+            color="primary"
+            (click)="pretrazi()">Pretraži</button>
+            <app-spinner-button *ngIf="fetchPending"></app-spinner-button>
         </span>
     </app-spacer-container>
 </div>
