--- a/frontend-poverenik/src/app/components/pretraga/napredna-pretraga/napredna-pretraga.component.html
+++ b/frontend-poverenik/src/app/components/pretraga/napredna-pretraga/napredna-pretraga.component.html
@@ -4,7 +4,14 @@
     <div [id]="page + 'naprednaPretraga'"></div>
     <br><br>
     <app-spacer-container>
-        <span></span>
+        <span>
+            <button 
+            *ngIf="!fetchPending"
+            mat-raised-button 
+            color="primary"
+            (click)="ngAfterViewInit()">Resetuj</button>
+            <app-spinner-button *ngIf="fetchPending"></app-spinner-button>
+        </span>
         <span>
         <button 
         *ngIf="!fetchPending"
