--- a/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.html
@@ -23,7 +23,7 @@
       
         <ng-container matColumnDef="datum">
           <th mat-header-cell *matHeaderCellDef>Datum podnošenja</th>
-          <td mat-cell *matCellDef="let zahtev"> {{convertDate(zahtev.datum)}} </td>
+          <td mat-cell *matCellDef="let zahtev"> {{zahtev.datum}} </td>
         </ng-container>
     
         <ng-container matColumnDef="status">
@@ -42,8 +42,8 @@
         <ng-container matColumnDef="metapodaci">
           <th mat-header-cell *matHeaderCellDef>Metapodaci</th>
           <td mat-cell *matCellDef="let zahtev">
-            <a [href]="xmlMetadata(zahtev.broj)" target="_blank">XML</a><br>
-            <a [href]="jsonMetadata(zahtev.broj)" target="_blank">JSON</a>
+            <a *ngIf="true" (click)="metadata(zahtev.broj, 'rdf')">RDF</a><br>
+            <a *ngIf="true" (click)="metadata(zahtev.broj, 'json')">JSON</a><br>
           </td>
         </ng-container>
 
