--- a/frontend-poverenik/src/app/components/odgovor/odgovor-list/odgovor-list.component.html
+++ b/frontend-poverenik/src/app/components/odgovor/odgovor-list/odgovor-list.component.html
@@ -24,12 +24,12 @@
 
         <ng-container matColumnDef="datumZalbe">
           <th mat-header-cell *matHeaderCellDef>Datum podnošenja žalbe</th>
-          <td mat-cell *matCellDef="let odgovor"> {{convertDate(odgovor.datumZalbe)}} </td>
+          <td mat-cell *matCellDef="let odgovor"> {{odgovor.datumZalbe}} </td>
         </ng-container>
     
         <ng-container matColumnDef="datum">
           <th mat-header-cell *matHeaderCellDef>Datum slanja odgovora</th>
-          <td mat-cell *matCellDef="let odgovor"> {{convertDate(odgovor.datum)}} </td>
+          <td mat-cell *matCellDef="let odgovor"> {{odgovor.datum}} </td>
         </ng-container>
 
         <ng-container matColumnDef="dokumenti">
@@ -43,8 +43,8 @@
         <ng-container matColumnDef="metapodaci">
           <th mat-header-cell *matHeaderCellDef>Metapodaci</th>
           <td mat-cell *matCellDef="let odgovor">
-            <a [href]="xmlMetadata(odgovor.broj)" target="_blank">XML</a><br>
-            <a [href]="jsonMetadata(odgovor.broj)" target="_blank">JSON</a>
+            <a *ngIf="true" (click)="metadata(odgovor.broj, 'rdf')">RDF</a><br>
+            <a *ngIf="true" (click)="metadata(odgovor.broj, 'json')">JSON</a><br>
           </td>
         </ng-container>
 
