--- a/frontend-poverenik/src/app/components/resenje/resenje-list/resenje-list.component.html
+++ b/frontend-poverenik/src/app/components/resenje/resenje-list/resenje-list.component.html
@@ -18,7 +18,7 @@
       
         <ng-container matColumnDef="datum">
           <th mat-header-cell *matHeaderCellDef>Datum izdavanja</th>
-          <td mat-cell *matCellDef="let resenje"> {{convertDate(resenje.datum)}} </td>
+          <td mat-cell *matCellDef="let resenje"> {{resenje.datum}} </td>
         </ng-container>
 
         <ng-container matColumnDef="status">
@@ -37,8 +37,8 @@
         <ng-container matColumnDef="metapodaci">
           <th mat-header-cell *matHeaderCellDef>Metapodaci</th>
           <td mat-cell *matCellDef="let resenje">
-            <a [href]="xmlMetadata(resenje.broj)" target="_blank">XML</a><br>
-            <a [href]="jsonMetadata(resenje.broj)" target="_blank">JSON</a>
+            <a *ngIf="true" (click)="metadata(resenje.broj, 'rdf')">RDF</a><br>
+            <a *ngIf="true" (click)="metadata(resenje.broj, 'json')">JSON</a><br>
           </td>
         </ng-container>
 
