--- a/frontend-organ-vlasti/src/app/components/zahtev/zahtev-form/zahtev-form.component.html
+++ b/frontend-organ-vlasti/src/app/components/zahtev/zahtev-form/zahtev-form.component.html
@@ -40,7 +40,7 @@
                     Opis dostave je obavezan!
                 </mat-error>    
             </mat-form-field>
-            <br><mat-label>Unesite opis tražene informacije: </mat-label>
+            <br><mat-label>Kliknite na 'Detalji' tag kako biste editovali opis tražene informacije:</mat-label>
             <div id="zahtevEditor"></div>
         </div>
         <br><br>
