--- a/frontend-poverenik/src/app/components/resenje/resenje-form/resenje-form.component.html
+++ b/frontend-poverenik/src/app/components/resenje/resenje-form/resenje-form.component.html
@@ -14,7 +14,7 @@
                     </mat-option>
                 </mat-select>                
             </mat-form-field>      
-            <br><mat-label>Unesite dispozitivu rešenja i obrazloženje: </mat-label>
+            <br><mat-label>Kliknite na 'Dispozitiva' i 'Obrazloženje' tag kako biste editovali odluku na žalbu:</mat-label>
             <div id="resenjeEditor"></div>
         </div>
 
