--- a/frontend-poverenik/src/app/components/zalba/zalba-odluka-form/zalba-odluka-form.component.html
+++ b/frontend-poverenik/src/app/components/zalba/zalba-odluka-form/zalba-odluka-form.component.html
@@ -37,7 +37,7 @@
                     Lozinka je obavezna!
                 </mat-error>    
             </mat-form-field>
-            <br><mat-label>Unesite opis tražene informacije/deo kojim niste zadovoljni: </mat-label>
+            <br><mat-label>Kliknite na 'Detalji' tag kako biste editovali opis tražene informacije:</mat-label>
             <div id="zalbaOdlukaEditor"></div>
         </div>    
         <br><br>
