--- a/frontend-organ-vlasti/src/app/components/odgovor/odgovor-form/odgovor-form.component.html
+++ b/frontend-organ-vlasti/src/app/components/odgovor/odgovor-form/odgovor-form.component.html
@@ -1,6 +1,6 @@
 <app-form-container>
     <h3>Odgovor na žalbu</h3><br><br>
-    <br><mat-label>Unesite odgovor na žalbu: </mat-label>
+    <br><mat-label>Kliknite na 'Detalji' tag kako biste editovali odgovor na žalbu:</mat-label>
     <div [class.disabled]="savePending">
         <div id="odgovorEditor"></div>
     </div>
