--- a/frontend-organ-vlasti/src/app/components/zalba/zalba-list/zalba-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/zalba/zalba-list/zalba-list.component.html
@@ -4,8 +4,8 @@
     <app-pretraga
     [tip]="'zalba'"
     [fetchPending]="fetchPending"
-    (obicnaPretragaTriggered)="obicnaPretraga($event)"
-    (naprednaPretragaTriggered)="naprednaPretraga($event)"></app-pretraga>
+    (obicnaPretragaTriggered)="pretraga($event, 'obicna')"
+    (naprednaPretragaTriggered)="pretraga($event, 'napredna')"></app-pretraga>
   </mat-drawer>
 
   <app-preloader *ngIf="fetchPending"></app-preloader>
