--- a/frontend-organ-vlasti/src/app/components/zahtev/zahtev-form/zahtev-form.component.html
+++ b/frontend-organ-vlasti/src/app/components/zahtev/zahtev-form/zahtev-form.component.html
@@ -41,7 +41,7 @@
                 </mat-error>    
             </mat-form-field>
             <br><mat-label>Kliknite na 'Detalji' tag kako biste editovali opis tražene informacije:</mat-label>
-            <div id="zahtevEditor"></div>
+            <div id="zahtevEditor" class="xonomy"></div>
         </div>
         <br><br>
         <app-center-container>
