--- a/frontend-poverenik/src/app/components/resenje/resenje-form/resenje-form.component.html
+++ b/frontend-poverenik/src/app/components/resenje/resenje-form/resenje-form.component.html
@@ -15,7 +15,7 @@
                 </mat-select>                
             </mat-form-field>      
             <br><mat-label>Kliknite na 'Dispozitiva' i 'Obrazloženje' tag kako biste editovali odluku na žalbu:</mat-label>
-            <div id="resenjeEditor"></div>
+            <div id="resenjeEditor" class="xonomy"></div>
         </div>
 
         <br><br>
