--- a/frontend-poverenik/src/app/components/zalba/zalba-cutanje-form/zalba-cutanje-form.component.html
+++ b/frontend-poverenik/src/app/components/zalba/zalba-cutanje-form/zalba-cutanje-form.component.html
@@ -56,7 +56,7 @@
                 </mat-error>    
             </mat-form-field>
             <br><mat-label>Kliknite na 'Detalji' tag kako biste editovali deo kojim niste zadovoljni:</mat-label>
-            <div id="zalbaCutanjeEditor"></div>
+            <div id="zalbaCutanjeEditor" class="xonomy"></div>
         </div>    
         <br><br>
         <app-center-container>
