--- a/frontend-poverenik/src/app/components/zalba/zalba-odluka-form/zalba-odluka-form.component.html
+++ b/frontend-poverenik/src/app/components/zalba/zalba-odluka-form/zalba-odluka-form.component.html
@@ -38,7 +38,7 @@
                 </mat-error>    
             </mat-form-field>
             <br><mat-label>Kliknite na 'Detalji' tag kako biste editovali opis tražene informacije:</mat-label>
-            <div id="zalbaOdlukaEditor"></div>
+            <div id="zalbaOdlukaEditor" class="xonomy"></div>
         </div>    
         <br><br>
         <app-center-container>
