--- a/frontend-organ-vlasti/src/app/components/odgovor/odgovor-form/odgovor-form.component.html
+++ b/frontend-organ-vlasti/src/app/components/odgovor/odgovor-form/odgovor-form.component.html
@@ -2,7 +2,7 @@
     <h3>Odgovor na žalbu</h3><br><br>
     <br><mat-label>Kliknite na 'Detalji' tag kako biste editovali odgovor na žalbu:</mat-label>
     <div [class.disabled]="savePending">
-        <div id="odgovorEditor"></div>
+        <div id="odgovorEditor" class="xonomy"></div>
     </div>
     <br><br>
     <app-center-container>
