--- a/frontend-organ-vlasti/src/app/components/odluka/obavestenje-form/obavestenje-form.component.html
+++ b/frontend-organ-vlasti/src/app/components/odluka/obavestenje-form/obavestenje-form.component.html
@@ -62,7 +62,7 @@
                 </mat-error>    
             </mat-form-field>
             <br><mat-label>Kliknite na 'Detalji' tag kako biste editovali opis tražene informacije:</mat-label>
-            <div id="obavestenjeEditor"></div>
+            <div id="obavestenjeEditor" class="xonomy"></div>
         </div>
         <br><br>
         <app-center-container>
