--- a/frontend-organ-vlasti/src/app/components/odluka/odbijanje-form/odbijanje-form.component.html
+++ b/frontend-organ-vlasti/src/app/components/odluka/odbijanje-form/odbijanje-form.component.html
@@ -2,7 +2,7 @@
     <h3>Odbijanje zahteva za informacijama od javnog značaja</h3><br><br>
     <div [class.disabled]="savePending">
         <br><mat-label>Kliknite na 'Detalji' tag kako biste editovali razlog odbijanja:</mat-label>
-        <div id="odbijanjeEditor"></div>
+        <div id="odbijanjeEditor" class="xonomy"></div>
     </div>
     <br><br>
     <app-center-container>
