--- a/frontend-poverenik/src/app/components/pretraga/napredna-pretraga/napredna-pretraga.component.html
+++ b/frontend-poverenik/src/app/components/pretraga/napredna-pretraga/napredna-pretraga.component.html
@@ -1,7 +1,7 @@
 <br><h4>Napredna pretraga</h4><br>
 
 <div class="root">
-    <div [id]="page + 'naprednaPretraga'"></div>
+    <div [id]="page + 'naprednaPretraga'" class="xonomy"></div>
     <br><br>
     <app-spacer-container>
         <span>
