--- a/frontend-poverenik/src/app/components/pretraga/obicna-pretraga/obicna-pretraga.component.html
+++ b/frontend-poverenik/src/app/components/pretraga/obicna-pretraga/obicna-pretraga.component.html
@@ -1,7 +1,7 @@
 <br><h4>Obična pretraga</h4><br>
 
 <div class="root">
-    <div [id]="page + 'obicnaPretraga'"></div>
+    <div [id]="page + 'obicnaPretraga'" class="xonomy"></div>
     <br><br>
     <app-spacer-container>
         <span></span>
