prvi krug detaljnog testiranja-sitne ispravkice :)

--- a/frontend-poverenik/src/app/components/odgovor/odgovor-list/odgovor-list.component.html
+++ b/frontend-poverenik/src/app/components/odgovor/odgovor-list/odgovor-list.component.html
@@ -2,7 +2,7 @@
 
   <mat-drawer mode="side" #drawer class="mat-elevation-z24">
     <app-pretraga
-    [tip]="'izvestaj'"
+    [tip]="'odgovor'"
     [fetchPending]="fetchPending"
     (obicnaPretragaTriggered)="pretraga($event, 'obicna')"
     (naprednaPretragaTriggered)="pretraga($event, 'napredna')"></app-pretraga>
