--- a/frontend-organ-vlasti/src/app/components/odluka/odluka-list/odluka-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/odluka/odluka-list/odluka-list.component.html
@@ -55,7 +55,7 @@
         <tr class="mat-row" *matNoDataRow><td class="mat-cell" colspan="5">Nema odluka</td></tr>
       
       </table>
-      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
     </div>
   </div>
   
