--- a/frontend-poverenik/src/app/components/izvestaj/izvestaj-list/izvestaj-list.component.html
+++ b/frontend-poverenik/src/app/components/izvestaj/izvestaj-list/izvestaj-list.component.html
@@ -48,7 +48,7 @@
         <tr class="mat-row" *matNoDataRow><td class="mat-cell" colspan="4">Nema izveštaja</td></tr>
   
       </table>
-      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
     </div>
   </div>
   
