izmena validatora za datum uvida u formi za obavestenje

--- a/frontend-organ-vlasti/src/app/components/odluka/obavestenje-form/obavestenje-form.component.html
+++ b/frontend-organ-vlasti/src/app/components/odluka/obavestenje-form/obavestenje-form.component.html
@@ -14,7 +14,7 @@
                 <mat-datepicker-toggle matSuffix [for]="datumUvida"></mat-datepicker-toggle>
                 <mat-datepicker #datumUvida></mat-datepicker>
                 <mat-error>
-                    Datum uvida je obavezan!
+                    Morate uneti validan datum uvida!
                 </mat-error>    
             </mat-form-field>
             <mat-form-field>
