--- a/frontend-poverenik/src/app/components/zalba/zalba-odluka-form/zalba-odluka-form.component.html
+++ b/frontend-poverenik/src/app/components/zalba/zalba-odluka-form/zalba-odluka-form.component.html
@@ -15,18 +15,18 @@
             </mat-form-field>
             <br>
             <mat-form-field>
-                <mat-label>Broj odluke</mat-label>
+                <mat-label>Broj rešenja za odbijanje</mat-label>
                 <input 
                 matInput 
                 autocomplete="off"
                 formControlName="brojOdluke" 
-                placeholder="Unesite broj odluke">
+                placeholder="Unesite broj rešenja za odbijanje">
                 <mat-error>
-                    Broj odluke je obavezan!
+                    Broj rešenja za odbijanje je obavezan!
                 </mat-error>
             </mat-form-field>     
             <mat-form-field>
-                <mat-label>Lozinka</mat-label>
+                <mat-label>Lozinka za autentifikaciju na portalu organa vlasti</mat-label>
                 <input 
                 type="password" 
                 matInput 
