--- a/frontend-organ-vlasti/src/app/components/izvestaj/izvestaj-list/izvestaj-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/izvestaj/izvestaj-list/izvestaj-list.component.html
@@ -15,15 +15,15 @@
     <h2>Lista godišnjih izveštaja</h2><br>
 
     <div class="mat-elevation-z8">
-      <table mat-table [dataSource]="izvestaji">
+      <table mat-table [dataSource]="izvestaji" matSort>
       
         <ng-container matColumnDef="godina">
-          <th mat-header-cell *matHeaderCellDef>Godina</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Godina</th>
           <td mat-cell *matCellDef="let izvestaj"> {{izvestaj.godina}} </td>
         </ng-container>
 
         <ng-container matColumnDef="datum">
-          <th mat-header-cell *matHeaderCellDef>Datum podnošenja</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Datum podnošenja</th>
           <td mat-cell *matCellDef="let izvestaj"> {{izvestaj.datum}} </td>
         </ng-container>
 
