--- a/frontend-organ-vlasti/src/app/components/odgovor/odgovor-list/odgovor-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/odgovor/odgovor-list/odgovor-list.component.html
@@ -15,20 +15,20 @@
     <h2>Lista odgovora na žalbe</h2><br>
 
     <div class="mat-elevation-z8">
-      <table mat-table [dataSource]="odgovori">
+      <table mat-table [dataSource]="odgovori" matSort>
       
         <ng-container matColumnDef="broj">
-          <th mat-header-cell *matHeaderCellDef>Broj žalbe</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Broj žalbe</th>
           <td mat-cell *matCellDef="let odgovor"> {{odgovor.broj}} </td>
         </ng-container>
 
         <ng-container matColumnDef="datumZalbe">
-          <th mat-header-cell *matHeaderCellDef>Datum podnošenja žalbe</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Datum podnošenja žalbe</th>
           <td mat-cell *matCellDef="let odgovor"> {{odgovor.datumZalbe}} </td>
         </ng-container>
     
         <ng-container matColumnDef="datum">
-          <th mat-header-cell *matHeaderCellDef>Datum slanja odgovora</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Datum slanja odgovora</th>
           <td mat-cell *matCellDef="let odgovor"> {{odgovor.datum}} </td>
         </ng-container>
 
