--- a/frontend-organ-vlasti/src/app/components/odluka/odluka-list/odluka-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/odluka/odluka-list/odluka-list.component.html
@@ -15,20 +15,20 @@
     <h2>Lista izdatih odluka</h2><br>
   
     <div class="mat-elevation-z8">
-      <table mat-table [dataSource]="odluke">
+      <table mat-table [dataSource]="odluke" matSort>
     
         <ng-container matColumnDef="tipOdluke">
-          <th mat-header-cell *matHeaderCellDef>Tip odluke</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Tip odluke</th>
           <td mat-cell *matCellDef="let odgovor"> {{odgovor.tipOdluke}} </td>
         </ng-container>
     
         <ng-container matColumnDef="datum">
-          <th mat-header-cell *matHeaderCellDef>Datum izdavanja</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Datum izdavanja</th>
           <td mat-cell *matCellDef="let odgovor"> {{odgovor.datum}} </td>
         </ng-container>
     
         <ng-container matColumnDef="datumZahteva">
-          <th mat-header-cell *matHeaderCellDef>Datum podnošenja zahteva</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Datum podnošenja zahteva</th>
           <td mat-cell *matCellDef="let odgovor"> {{odgovor.datumZahteva}} </td>
         </ng-container>
   
