--- a/frontend-organ-vlasti/src/app/components/resenje/resenje-list/resenje-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/resenje/resenje-list/resenje-list.component.html
@@ -14,15 +14,15 @@
     <h2>Lista izdatih rešenja</h2><br>
 
     <div class="mat-elevation-z8">
-      <table mat-table [dataSource]="resenja">
+      <table mat-table [dataSource]="resenja" matSort>
       
         <ng-container matColumnDef="datum">
-          <th mat-header-cell *matHeaderCellDef>Datum izdavanja</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Datum izdavanja</th>
           <td mat-cell *matCellDef="let resenje"> {{resenje.datum}} </td>
         </ng-container>
 
         <ng-container matColumnDef="status">
-          <th mat-header-cell *matHeaderCellDef>Status</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
           <td mat-cell *matCellDef="let resenje"> {{resenje.status}} </td>
         </ng-container>
 
