--- a/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.html
@@ -14,20 +14,20 @@
     <h2>Lista podnešenih zahteva</h2><br>
 
     <div class="mat-elevation-z8">
-      <table mat-table [dataSource]="zahtevi">
+      <table mat-table [dataSource]="zahtevi" matSort>
 
         <ng-container matColumnDef="tip">
-          <th mat-header-cell *matHeaderCellDef>Tip zahteva</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Tip zahteva</th>
           <td mat-cell *matCellDef="let zahtev"> {{zahtev.tipZahteva}} </td>
         </ng-container>
       
         <ng-container matColumnDef="datum">
-          <th mat-header-cell *matHeaderCellDef>Datum podnošenja</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Datum podnošenja</th>
           <td mat-cell *matCellDef="let zahtev"> {{zahtev.datum}} </td>
         </ng-container>
     
         <ng-container matColumnDef="status">
-          <th mat-header-cell *matHeaderCellDef>Status</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
           <td mat-cell *matCellDef="let zahtev"> {{zahtev.status}} </td>
         </ng-container>
 
