--- a/frontend-poverenik/src/app/components/zalba/zalba-list/zalba-list.component.html
+++ b/frontend-poverenik/src/app/components/zalba/zalba-list/zalba-list.component.html
@@ -15,20 +15,20 @@
     <h2>Lista podnetih žalbi</h2><br>
   
     <div class="mat-elevation-z8">
-      <table mat-table [dataSource]="zalbe">
+      <table mat-table [dataSource]="zalbe" matSort>
       
         <ng-container matColumnDef="tipZalbe">
-          <th mat-header-cell *matHeaderCellDef>Tip žalbe</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Tip žalbe</th>
           <td mat-cell *matCellDef="let zalba"> {{zalba.tipZalbe}} </td>
         </ng-container>
     
         <ng-container matColumnDef="datum">
-          <th mat-header-cell *matHeaderCellDef>Datum</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Datum</th>
           <td mat-cell *matCellDef="let zalba"> {{zalba.datum}} </td>
         </ng-container>
   
         <ng-container matColumnDef="status">
-          <th mat-header-cell *matHeaderCellDef>Status</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
           <td mat-cell *matCellDef="let zalba">{{zalba.status}}</td>
         </ng-container>
   
